<resources>
    <string name="app_name">Campos</string>

    <!--Common-->
    <string name="common_action_ok">OK</string>

    <!--Bottom menu-->
    <string name="bottom_menu_profile_title">Profile</string>
    <string name="bottom_menu_map_title">Map</string>

    <!--fragment_sign_in.xml-->
    <string name="fragment_sign_in_title">Hey there! Ready to go?\nJust sign in with your Campos account and you\'re all set</string>
    <string name="fragment_sign_in_email_input_hint">Email</string>
    <string name="fragment_sign_in_password_input_hint">Password</string>
    <string name="fragment_sign_in_action_sign_in">Sign in</string>
    <string name="fragment_sign_in_error_user_not_found">Oops! No user found with such credentials. Please, try again</string>
    <string name="fragment_sign_in_sign_up_suggestion">Aren\'t with us yet?\nPress Sign up and join!\nEasy like 1 2 3</string>
    <string name="fragment_sign_in_action_sign_up">Sign up</string>

    <!--fragment_sign_up.xml-->
    <string name="fragment_sign_up_text_tell_us_about_you">Yay!\nWe are <b>Campos</b> - a community of people enjoying sports and hanging out together!\nReady to join?</string>
    <string name="fragment_sign_up_input_hint_first_name">First name</string>
    <string name="fragment_sign_up_input_hint_last_name">Last name</string>
    <string name="fragment_sign_up_input_hint_email">Email</string>
    <string name="fragment_sign_up_input_hint_password">Password</string>
    <string name="fragment_sign_up_action_join">Join</string>
    <string name="fragment_sign_up_forgot_password"><u>Forgot password</u></string>
    <string name="fragment_sign_up_error_empty_first_name">Please enter first name</string>
    <string name="fragment_sign_up_error_empty_last_name">Please enter last name</string>
    <string name="fragment_sign_up_error_invalid_email">Invalid email format</string>
    <string name="fragment_sign_up_error_invalid_password">Password must be longer than 8 symbols and contain at least one lowercase and uppercase character, numeric symbol and special sign</string>
    <string name="fragment_sign_up_error_sign_up">Oops, we\'ve done our best, but we had an error. Please, try again</string>
    <string name="fragment_sign_up_error_email_collision">Oops, looks like this email already registered. Please, use another one</string>

    <!--fragment_success_sign_up.xml-->
    <string name="fragment_success_sign_up_text_account_created">Cheers!\nYour account was successfully created!</string>

    <!--fragment_forgot_password-->
    <string name="fragment_forgot_password_text_enter_email">Please enter your email, so we can send you recovery message</string>
    <string name="fragment_forgot_password_hint_recovery_email">Recovery email</string>
    <string name="fragment_forgot_password_error_email_not_fount">Oops, we can\'t find entered email, please try again with another one</string>
    <string name="fragment_forgot_password_error_unknown">Oops, there\'s unknown error occurred. Please, try once again</string>

    <!--fragment_success_forgot_password-->
    <string name="fragment_success_forgot_password_text_message_sent">Recovery message was sent to your email!</string>

    <!--fragment_map.xml-->
    <string name="fragment_map__action_filter_desc">Filter button</string>
    <string name="fragment_map__action_filter_text">Filter</string>
    <string name="fragment_map__action_my_location_desc">My location button</string>

    <!--fragment_filter.xml-->
    <string name="fragment_filter__text_title">Filter playgrounds by</string>
    <string name="fragment_filter__img_filter_by_active_players_desc">Image of group of people</string>
    <string name="fragment_filter__text_filter_by_active_players">Active players</string>
    <string name="fragment_filter__img_filter_by_sport_category_desc">Image of sports cup</string>
    <string name="fragment_filter__text_filter_by_sport_category">Sport category</string>
    <string name="fragment_filter__text_chip_active_players_all">All</string>
    <string name="fragment_filter__text_chip_active_players_empty">Empty</string>
    <string name="fragment_filter__text_chip_active_players_1_to_5">1–5</string>
    <string name="fragment_filter__text_chip_active_players_5_to_10">5–10</string>
    <string name="fragment_filter__text_chip_active_players_10_to_15">10–15</string>
    <string name="fragment_filter__text_chip_active_players_from_15">15+</string>
    <string name="fragment_filter__text_chip_sport_category_all">All</string>
    <string name="fragment_filter__text_chip_sport_category_football">Football</string>
    <string name="fragment_filter__text_chip_sport_category_basketball">Basketball</string>
    <string name="fragment_filter__text_chip_sport_category_volleyball">Volleyball</string>
    <string name="fragment_filter__action_apply">Apply</string>

    <!--fragment_playground.xml-->
    <string name="fragment_playground_button_in_label">I\'m in !</string>
    <string name="fragment_playground_currently_there_label">Currently there</string>
    <string name="fragment_playground_no_active_players_text">There are no active players there at the moment</string>
    <string name="fragment_playground_you_are_on_this_playground"><u>YAAAY! You are playing right here at the moment! Enjoy the game!</u></string>
    <string name="fragment_playground_you_are_on_another_playground"><u>You are playing on %s at the moment! To join this game, please, end another one</u></string>

    <!--fragment_qr_confirmation.xml-->
    <string name="fragment_qr_confirmation__text_scan_qr">OK, now catch Campos QR code with your camera to confirm that you are on playground!</string>

    <!--fragment_success_qr_confirmation.xml-->
    <string name="fragment_success_qr_confirmation__text_success_title">Success!</string>
    <string name="fragment_success_qr_confirmation__text_success_subtitle">Gotcha! You\'ve approved your location on playground! Thank you and enjoy the game!</string>
    <string name="fragment_success_qr_confirmation__desc_image_alex">Woman in a sport suit, showing like gesture</string>
    <string name="fragment_success_qr_confirmation__desc_image_dave">Man in a sport suit, showing like gesture</string>
    <string name="fragment_success_qr_confirmation__desc_image_andy">Man in a sport suit, showing like gesture</string>

    <!--fragment_profile.xml-->
    <string name="fragment_profile_text_currently_playing_on">You are currently playing on</string>
    <string name="fragment_profile_text_no_active_games">
        You are currently not playing anywhere. \nGo to map and find someone to play with!
    </string>
    <string name="fragment_profile_action_leave_game">Leave the game</string>
    <string name="fragment_profile_action_log_out_label">log\nout</string>
    <string name="fragment_profile_campos_athlete_label"><u>Campos Athlete</u></string>

    <!--PermissionDeniedDialog-->
    <string name="map_location_denied_dialog__permission_required_message">Oops! Sorry, playgrounds won\'t work without location data. Please provide location access permission in settings</string>
    <string name="qr_confirmation_location_denied_dialog__permission_required_message">Oops! Sorry, QR confirmation won\'t work without location data. Please provide location access permission in settings</string>
    <string name="qr_confirmation_camera_denied_dialog__permission_required_message">Oops! Sorry, QR confirmation won\'t work without camera. Please provide camera access permission in settings</string>
</resources>