<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_success_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:layout_marginTop="56dp"
        android:text="@string/fragment_success_qr_confirmation__text_success_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_success_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintVertical_bias="0"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_success_qr_confirmation__text_success_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_alex"
        app:layout_constraintTop_toBottomOf="@id/tv_success_title" />

    <ImageView
        android:id="@+id/iv_alex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camposalex"
        android:contentDescription="@string/fragment_success_qr_confirmation__desc_image_alex"
        app:layout_constraintBottom_toTopOf="@id/iv_dave"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_dave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camposdave"
        android:contentDescription="@string/fragment_success_qr_confirmation__desc_image_dave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_andy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camposandy"
        android:contentDescription="@string/fragment_success_qr_confirmation__desc_image_andy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/b_ok"
        style="@style/Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/common_action_ok"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_andy"
        app:layout_constraintStart_toEndOf="@id/iv_dave"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>